# Python_Web_14

./: .coverage  README.md  docker-compose.yml  main.py  pyproject.toml  test.db  test_unit_repository_contacts.py
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/: env.py
migrations/versions/: 57f831470d46_init.py  91dcdeb6873a_make_base.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: test_route_auth.py  test_route_contacts.py  test_route_users.py
